Fix scrollbar not rendering in aside

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -308,7 +308,6 @@
   }
 
   .projects {
-    overflow-x: hidden;
     overflow-y: scroll;
 
     a {
